objects/ASI_eForm_KR_Leave_EE__c.object
<CustomObject>
    <fields>
        <fullName>ASI_eForm_Accumulation_from_past_year__c</fullName>
        <label>Accumulation from past year</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Accumulation_from_this_year__c</fullName>
        <label>Accumulation from this year</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Available_Annual_Leave__c</fullName>
        <label>Available Annual Leave</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Compulsory_Annual_Leave__c</fullName>
        <label>Compulsory Annual Leave</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local Employee ID</label>
        <referenceTo>ASI_eForm_HR_MDM__c</referenceTo>
        <relationshipLabel>Employee Leave Entitlements</relationshipLabel>
        <relationshipName>Leave_Employee_Entitlements1_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Home_Leave__c</fullName>
        <label>Home Leave</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Korean_Name__c</fullName>
        <formula>ASI_eForm_Employee_Record__r.ASI_eForm_Employee_Korean_Name__c</formula>
        <label>Korean Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Leave_Entitlement__c</fullName>
        <label>Annual Leave Entitlement</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Long_term_service__c</fullName>
        <label>Long term service</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Total_Special_Leave__c</fullName>
        <label>Total Special Leave</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Used_Annual_Leave__c</fullName>
        <label>Used Annual Leave</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Used_Special_Leave__c</fullName>
        <label>Used Special Leave</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_externalID__c</fullName>
        <label>externalID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_eform_Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Employee Leave Entitlement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_eform_Year__c</columns>
        <columns>ASI_eForm_Employee_Record__c</columns>
        <columns>ASI_eForm_Korean_Name__c</columns>
        <columns>ASI_eForm_Total_Special_Leave__c</columns>
        <columns>ASI_eForm_Leave_Entitlement__c</columns>
        <columns>ASI_eForm_Accumulation_from_past_year__c</columns>
        <columns>ASI_eForm_Accumulation_from_this_year__c</columns>
        <columns>ASI_eForm_Available_Annual_Leave__c</columns>
        <columns>ASI_eForm_Compulsory_Annual_Leave__c</columns>
        <columns>ASI_eForm_Long_term_service__c</columns>
        <columns>ASI_eForm_Home_Leave__c</columns>
        <columns>ASI_eForm_Used_Special_Leave__c</columns>
        <columns>ASI_eForm_Used_Annual_Leave__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Soyoun</value>
        </filters>
        <label>All (soyeon)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_2017</fullName>
        <columns>NAME</columns>
        <columns>ASI_eform_Year__c</columns>
        <columns>ASI_eForm_Employee_Record__c</columns>
        <columns>ASI_eForm_Korean_Name__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>ASI_eForm_Total_Special_Leave__c</columns>
        <columns>ASI_eForm_Leave_Entitlement__c</columns>
        <columns>ASI_eForm_Accumulation_from_past_year__c</columns>
        <columns>ASI_eForm_Accumulation_from_this_year__c</columns>
        <columns>ASI_eForm_Available_Annual_Leave__c</columns>
        <columns>ASI_eForm_Compulsory_Annual_Leave__c</columns>
        <columns>ASI_eForm_Long_term_service__c</columns>
        <columns>ASI_eForm_Home_Leave__c</columns>
        <columns>ASI_eForm_Used_Special_Leave__c</columns>
        <columns>ASI_eForm_Used_Annual_Leave__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_eform_Year__c</field>
            <operation>equals</operation>
            <value>2018</value>
        </filters>
        <label>All_2018</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>LE-{000000}</displayFormat>
        <label>Leave Entitlement</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Leave Entitlements</pluralLabel>
    <recordTypes>
        <fullName>ASI_eForm_KR_Leave_Entitlement</fullName>
        <active>true</active>
        <label>Leave</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>